# erro

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: README.md
.github/linters/: .codespellrc  .jscpd.json  commitlint.config.js
.github/workflows/: bookbinder.yml  push.yml
.make/: render.sh  template.py
2017/: 2017-en-cv.tex  2017-it-cv.tex  en.tex  it.tex
2018/: en.tex  it.tex
2019/: custom.tex  en.tex  europass.tex  it.tex  keys.json
docs/: README.md  about.md  design.md  download.md
src/: config_en.yaml  config_it.yaml  custom.tex  europass.tex  keys.json  template_europass.tex  template_personal.tex  template_plain.txt  template_web.html
src/langs/: en.yml  it.yml
src/templates/: europass.tex.j2  personal.tex.j2  plain.txt.j2  web.html.j2
zeus/: commands.yml  config.yml
zeus/scripts/: render.sh  template.py
