[project]
name = "erro"
version = "0.1.0"
description = "Multi-format CV/resume generator"
readme = ".github/README.md"
requires-python = ">=3.13"
license = { text = "GPL-3.0-or-later" }
dependencies = [
  "Jinja2",
  "PyYAML",
]

[dependency-groups]
dev = [
  "mypy",
  "types-PyYAML",
]

[tool.uv]
package = false

[tool.mypy]
strict = true
files = [".make"]
